--- a/sample_project_01/intro-scikit-learn.ipynb
+++ b/sample_project_01/intro-scikit-learn.ipynb
@@ -3890,14 +3890,259 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "21e5bf50-260a-4920-b694-e47b267797c2",
+   "metadata": {},
+   "source": [
+    "## make predictions with predict_proba()"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 146,
    "id": "6df04143-3190-476e-be93-319127a4326c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.89, 0.11],\n",
+       "       [0.49, 0.51],\n",
+       "       [0.43, 0.57],\n",
+       "       [0.84, 0.16],\n",
+       "       [0.18, 0.82]])"
+      ]
+     },
+     "execution_count": 146,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# make predictions with predict_proba()\n",
+    "clf.predict_proba(x_test[:5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "id": "e78b33c4-48e8-439c-8187-0d262b1cc9a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 1, 0, 1], dtype=int64)"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# predict on the same data\n",
+    "clf.predict(x_test[:5])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f4915661-a1f3-4702-a61b-dd06806bc9a7",
+   "metadata": {},
+   "source": [
+    "# predict() for regression models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "id": "5adb51ed-0e91-4702-a527-f93077e3da23",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# make pred"
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "\n",
+    "# setup random seed\n",
+    "np.random.seed(42)\n",
+    "\n",
+    "# create the data\n",
+    "x = housing_df.drop(\"target\", axis=1)\n",
+    "y = housing_df[\"target\"] # median house price in 1000000\n",
+    "\n",
+    "# split train and test data\n",
+    "x_train, x_test, y_train, y_test = train_test_split(x,y,test_size=0.2)\n",
+    "\n",
+    "# instantiate and fit the model\n",
+    "model = RandomForestRegressor()\n",
+    "model.fit(x_train,y_train)\n",
+    "y_preds = model.predict(x_test)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "id": "1ccd6503-0ab2-4438-99d9-73eddd058bff",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.49384  , 0.75494  , 4.9285964, 2.54316  , 2.33176  , 1.6525301,\n",
+       "       2.34323  , 1.66182  , 2.47489  , 4.8344779])"
+      ]
+     },
+     "execution_count": 149,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_preds[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "id": "6cc19fb2-486d-41b6-8707-dc7581423cb0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.477  , 0.458  , 5.00001, 2.186  , 2.78   , 1.587  , 1.982  ,\n",
+       "       1.575  , 3.4    , 4.466  ])"
+      ]
+     },
+     "execution_count": 152,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.array(y_test[:10])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "id": "b11d5f2d-3ced-4e91-9e22-b39c8e4a756e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.32659871732073664"
+      ]
+     },
+     "execution_count": 153,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# compare preds to truth\n",
+    "from sklearn.metrics import mean_absolute_error\n",
+    "mean_absolute_error(y_test,y_preds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "id": "9c3fb81b-30ed-450b-a89d-7b160775cb5b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        4.526\n",
+       "1        3.585\n",
+       "2        3.521\n",
+       "3        3.413\n",
+       "4        3.422\n",
+       "         ...  \n",
+       "20635    0.781\n",
+       "20636    0.771\n",
+       "20637    0.923\n",
+       "20638    0.847\n",
+       "20639    0.894\n",
+       "Name: target, Length: 20640, dtype: float64"
+      ]
+     },
+     "execution_count": 154,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "housing_df[\"target\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9f42a5a5-3570-41f8-80f8-1ab18f573d67",
+   "metadata": {},
+   "source": [
+    "## 4. evaluating a model\n",
+    "1. estimators built in score\n",
+    "2. scoring parameter\n",
+    "3. problem specific metric fundtion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4795d103-2b11-472e-8695-71eaaca5dd7a",
+   "metadata": {},
+   "source": [
+    "### 4.1 evaluating a model with score method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "id": "5f1aa0e0-48ac-46c7-8e17-a320dee36a34",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8524590163934426"
+      ]
+     },
+     "execution_count": 155,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "# setup random seed\n",
+    "np.random.seed(42)\n",
+    "\n",
+    "# create the data\n",
+    "x = heart_disease.drop(\"target\", axis=1)\n",
+    "y = heart_disease[\"target\"] # median house price in 1000000\n",
+    "\n",
+    "# split train and test data\n",
+    "x_train, x_test, y_train, y_test = train_test_split(x,y,test_size=0.2)\n",
+    "\n",
+    "# instantiate and fit the model\n",
+    "clf = RandomForestClassifier()\n",
+    "\n",
+    "# fit model to data\n",
+    "clf.fit(x_train,y_train)\n",
+    "\n",
+    "# evaluate model\n",
+    "clf.score(x_test,y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f4d7f5f-eb98-4800-83a5-9d57dc9c355a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
