--- a/sample_project_01/intro-scikit-learn.ipynb
+++ b/sample_project_01/intro-scikit-learn.ipynb
@@ -5635,12 +5635,189 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2f2e2f8f-9819-4d2a-8df3-3b94777e21a5",
+   "metadata": {},
+   "source": [
+    "## 5. improving the model\n",
+    "### 5.1 tunnig hyperparameters by hand\n",
+    "need 3 sets: training, validation and test"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ed01b20d-1743-411b-acca-d108ea7ab2a2",
+   "execution_count": 220,
+   "id": "ffe10283-513d-4960-ab08-a88358c0d907",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'bootstrap': True,\n",
+       " 'ccp_alpha': 0.0,\n",
+       " 'class_weight': None,\n",
+       " 'criterion': 'gini',\n",
+       " 'max_depth': None,\n",
+       " 'max_features': 'sqrt',\n",
+       " 'max_leaf_nodes': None,\n",
+       " 'max_samples': None,\n",
+       " 'min_impurity_decrease': 0.0,\n",
+       " 'min_samples_leaf': 1,\n",
+       " 'min_samples_split': 2,\n",
+       " 'min_weight_fraction_leaf': 0.0,\n",
+       " 'n_estimators': 100,\n",
+       " 'n_jobs': None,\n",
+       " 'oob_score': False,\n",
+       " 'random_state': None,\n",
+       " 'verbose': 0,\n",
+       " 'warm_start': False}"
+      ]
+     },
+     "execution_count": 220,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clf.get_params()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35264459-cebc-4fab-baae-4338be3281bc",
+   "metadata": {},
+   "source": [
+    "Adjust:\n",
+    "* `max_depth`\n",
+    "* `max_features`\n",
+    "* `min_sample_leaf`\n",
+    "* `min_sample_split`\n",
+    "* `n_estimators`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 221,
+   "id": "2d9441ae-0e6d-4545-a088-7dd47a568a9b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def evaluate_preds(y_true, y_preds):\n",
+    "    \"\"\"\n",
+    "    perform evaluation comparison between y_true and y_preds for classification models\n",
+    "    \"\"\"\n",
+    "    accuracy = accuracy_score(y_true, y_preds)\n",
+    "    precision = precision_score(y_true, y_preds)\n",
+    "    recall = recall_score(y_true, y_preds)\n",
+    "    f1 = f1_score(y_true, y_preds)\n",
+    "    metric_dict = {\n",
+    "        \"accuracy\": accuracy,\n",
+    "        \"precision\": precision,\n",
+    "        \"recall\": recall,\n",
+    "        \"f1\": f1\n",
+    "    }\n",
+    "    print(accuracy)\n",
+    "    print(precision)\n",
+    "    print(recall)\n",
+    "    print(f1)\n",
+    "    return metric_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 224,
+   "id": "2570b420-63d2-4d4e-8c0b-81fcec62002d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8222222222222222\n",
+      "0.8148148148148148\n",
+      "0.88\n",
+      "0.8461538461538461\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "np.random.seed(42)\n",
+    "# Shuffle the data\n",
+    "heart_disease_shuffled = heart_disease.sample(frac=1)\n",
+    "\n",
+    "# Split into x and y\n",
+    "x = heart_disease_shuffled.drop(\"target\", axis=1)\n",
+    "y = heart_disease_shuffled[\"target\"]\n",
+    "\n",
+    "# split into train and test\n",
+    "train_split = round(0.7 * len(heart_disease_shuffled))\n",
+    "valid_split = round(train_split + 0.15 * len(heart_disease_shuffled))\n",
+    "x_train, y_train = x[:train_split], y[:train_split]\n",
+    "x_valid, y_valid = x[train_split: valid_split], y[train_split: valid_split]\n",
+    "x_test, y_test = x[valid_split:], y[valid_split:]\n",
+    "\n",
+    "clf = RandomForestClassifier()\n",
+    "clf.fit(x_train, y_train)\n",
+    "\n",
+    "# Make baseline predictions\n",
+    "y_preds = clf.predict(x_valid)\n",
+    "\n",
+    "# evaluate model on validation set\n",
+    "baseline_metrics = evaluate_preds(y_valid, y_preds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 226,
+   "id": "f5cc8fb4-55f0-4a60-b18b-ccdd0a7104da",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8222222222222222\n",
+      "0.8148148148148148\n",
+      "0.88\n",
+      "0.8461538461538461\n"
+     ]
+    }
+   ],
+   "source": [
+    "np.random.seed(42)\n",
+    "\n",
+    "# create second classifier with different hyperparameters\n",
+    "clf_2 = RandomForestClassifier(n_estimators=1000)\n",
+    "clf_2.fit(x_train, y_train)\n",
+    "\n",
+    "# Make predictions\n",
+    "y_preds_2 = clf_2.predict(x_valid)\n",
+    "\n",
+    "# evaluate model on validation set\n",
+    "clf_2_metrics = evaluate_preds(y_valid, y_preds_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b544858-fc8c-40df-a0ea-f9f2065d2cb9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf_3 = RandomForestClassifier(\n",
+    "    n_estimators=1000,\n",
+    "    max_depth=10\n",
+    ")\n",
+    "clf_3.fit(x_train, y_train)\n",
+    "\n",
+    "# Make predictions\n",
+    "y_preds_3 = clf_3.predict(x_valid)\n",
+    "\n",
+    "# evaluate model on validation set\n",
+    "clf_3_metrics = evaluate_preds(y_valid, y_preds_3)"
+   ]
   }
  ],
  "metadata": {
