--- a/sample_project_01/scikit-learn-exercises.ipynb
+++ b/sample_project_01/scikit-learn-exercises.ipynb
@@ -2022,28 +2022,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5713.821520855157"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Find the MAE by comparing the car sales test labels to the car sales predictions\n",
-    "###\n",
+    "mae =  mean_absolute_error(car_y_test, car_y_preds)\n",
     "# Return the MAE\n",
-    "###"
+    "mae"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.2540261105794388"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Find the R^2 score by comparing the car sales test labels to the car sales predictions\n",
-    "###\n",
+    "r2 = r2_score(car_y_test, car_y_preds)\n",
     "# Return the R^2 score\n",
-    "###"
+    "r2"
    ]
   },
   {
